# meshview

./: .dockerignore  .env.example  .gitignore  Containerfile  DATABASE_MIGRATION.md  Dockerfile  Makefile  README-Docker.md  README.md  add_relay_node_column.py  alembic.ini  compose.yaml  create_example_migration.py  create_migration.py  docker-compose.yaml  main.py  meshview.service.example  migrate_add_timestamp_us.py  mvrun.py  nanopb_pb2.py  pyproject.toml  requirements.txt  sample.config.ini  startdb.py
.github/workflows/: container.yml
alembic/: env.py
alembic/versions/: 1717fa5c6545_add_example_table.py  23dad03d2e42_add_is_mqtt_gateway_to_node.py  4f1d2a9c8b71_add_daily_snapshot_table.py  9f3b1a8d2c4f_drop_import_time_columns.py  a0c9c13e118f_add_node_public_key.py  ac311b3782a1_add_route_return_to_traceroute.py  add_import_time_us_columns.py  b7c3c2e3a1f0_add_last_update_us_to_node.py  c6b1d8f2a9e3_add_relay_node_to_packet_seen.py  c6b1d8f2a9e3_compat_placeholder.py  c88468b7ab0b_initial_migration.py  d4d7b0c2e1a4_drop_last_update_us_from_node.py  fb5781f0c470_add_microsecond_timestamp_columns.py
container/: config.ini
docker/: .env.example  Dockerfile  README.md  compose.yaml
docs/: API_Documentation.md  COVERAGE.md  README.md
meshtastic/protobuf/: UPSTREAM_REV.txt
meshview/: __version__.py  config.py  database.py  deps.py  lora.py  migrations.py  models.py  mqtt_database.py  mqtt_reader.py  mqtt_store.py  radio_hw.py  store.py  web.py
meshview/lang/: en.json  es.json  ru.json
meshview/radio/: coverage.py
meshview/static/: kiosk.html  portmaps.js
meshview/templates/: base.html  base_reduced.html  chat.html  firehose.html  map.html  map_kiosk.html  net.html  new_node.html  new_packet.html  node.html  nodegraph.html  nodelist.html  packet.html  packet_details.html  stats.html  top.html  traceroute.html
meshview/web_api/: api.py
scripts/: update_meshtastic_protobufs.py
sensors/: README.md  collector.py
sensors/templates/: base.html  dashboard.html
