[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "meshview"
version = "2.0.3"
description = "Real-time monitoring and diagnostic tool for Meshtastic mesh networks"
readme = "README.md"
requires-python = ">=3.11"
license = {file = "COPYING"}
authors = [
    {name = "Pablo Revilla", email = "pablorevilla-meshtastic@users.noreply.github.com"}
]
keywords = ["meshtastic", "mesh", "network", "visualization", "mqtt", "real-time", "monitoring"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Communications :: Ham Radio",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: System :: Monitoring",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved",
    "Operating System :: OS Independent",
]

dependencies = [
    "protobuf~=5.29.3",
    "aiomqtt~=2.3.0",
    "sqlalchemy[asyncio]~=2.0.38",
    "cryptography~=44.0.1",
    "aiosqlite~=0.21.0",
    "aiohttp~=3.11.12",
    "aiodns~=3.2.0",
    "Jinja2~=3.1.5",
    "aiohttp-sse",
    "asyncpg~=0.30.0",
    "seaborn~=0.13.2",
    "pydot~=3.0.4",
    "plotly~=6.0.0",
    "numpy~=2.2.3",
    "pillow~=11.1.0",
    "attrs~=25.1.0",
    "cffi~=1.17.1",
    "paho-mqtt~=2.1.0",
    "pytz~=2025.1",
    "idna~=3.10",
    "multidict~=6.1.0",
    "propcache~=0.2.1",
    "typing_extensions~=4.12.2",
    "pyparsing~=3.2.1",
    "pycares~=4.5.0",
    "MarkupSafe~=3.0.2",
    "pandas~=2.2.3",
    "matplotlib~=3.10.0",
    "python-dateutil~=2.9.0.post0",
    "packaging~=24.2",
    "narwhals~=1.27.1",
    "yarl~=1.18.3",
    "aiosignal~=1.3.2",
    "frozenlist~=1.5.0",
    "aiohappyeyeballs~=2.4.6",
    "cycler~=0.12.1",
    "six~=1.17.0",
    "greenlet~=3.1.1",
    "psutil~=7.0.0",
    "objgraph~=3.6.2",
    "contourpy~=1.3.1",
    "fonttools~=4.56.0",
    "pycparser~=2.22",
    "kiwisolver~=1.4.8",
]

[project.scripts]
meshview = "main:cli_main"
meshview-run = "mvrun:main"
meshview-startdb = "startdb:main_cli"

[project.urls]
Homepage = "https://github.com/pablorevilla-meshtastic/meshview"
Repository = "https://github.com/pablorevilla-meshtastic/meshview"
Issues = "https://github.com/pablorevilla-meshtastic/meshview/issues"
Documentation = "https://github.com/pablorevilla-meshtastic/meshview#readme"

[tool.setuptools.packages.find]
include = ["meshview*"]

[tool.setuptools.package-data]
meshview = ["templates/*", "*.png"]

[tool.setuptools.package-dir]
"" = "."
